# hidden-messages

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_FEEDBACK.md  Caddyfile  Makefile  README.md  TESTING_SUMMARY.md  agents.md  docker-compose.dev.yml  docker-compose.yml  e2etests_output_oct2.md
backend/: .env.development.example  Dockerfile  README.md  alembic.ini  log_conf.yaml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20241005_add_llm_call_events.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  agent_manager.py  prompts.py  schemas.py
backend/app/api/: __init__.py  routes.py  schemas.py  session_state.py
backend/app/core/: llm_event_logger.py  logging.py
backend/app/models/: __init__.py  database.py  guess.py  llm_call_event.py  message.py  session.py
backend/scripts/: run_turn.py  start_session.py
backend/tests/: .gitkeep  E2E_TESTING.md  QUICK_START.md  README.md  conftest.py  test_agent_manager.py  test_api_integration.py  test_database_models.py  test_e2e_real_llm.py  test_e2e_simple.py  test_edge_cases.py  test_llm_event_logger.py  test_schemas.py
docs/: DEMO_MODE.md  E2E_TESTS_ADDED.md  FRONTEND_HANDOFF.md  FRONTEND_SPEC.md  INTEGRATION_GUIDE.md  MAKEFILE_REFERENCE.md  README.md  SPEC_UPDATES_SUMMARY.md  TERMINAL_UI_REFERENCE.md
frontend/: Dockerfile  MOCK_MODE_GUIDE.md  PROJECT_README.md  QUICK_START.md  README.md  TERMINAL_UI_REFERENCE.md  frontend-README.md  index.html  tailwind.config.ts  vite.config.ts
ideas/: prd.md  prompts_ideas.md  ui-ux-design.md
(+20 files in other folders)
